# pico-ice-projects

./: .gitignore  Makefile  README.md
00-example/: Makefile  README.md
00-example/ice/: Makefile
00-example/ice/cfg/: pinout.pcf
00-example/ice/rtl/: top.vhdl
00-example/pico/: CMakeLists.txt  Makefile
00-example/pico/src/: main.c
